--- a/_includes/layout/footer.html
+++ b/_includes/layout/footer.html
@@ -1,3 +1,28 @@
+{% comment %}
+Title: Footer Layout
+Description: Site footer with animated logo, contact information, expandable mobile menu, and desktop link sections. Includes accordion functionality for mobile.
+Page Usages: Included in the main layout for all pages
+Parameters:
+- site.data.textblocks.footer.address_street: Street address text
+- site.data.textblocks.footer.address_city: City address text
+- site.data.textblocks.footer.email: Email address text
+- site.data.textblocks.footer.company: Company section title
+- site.data.textblocks.footer.for_companies: Link text for companies page
+- site.data.textblocks.footer.anti_money_laundering: Link text for AML page
+- site.data.textblocks.footer.financial_advice: Link text for financial advice page
+- site.data.textblocks.footer.help: Help section title
+- site.data.textblocks.footer.process_benefits: Link text for process benefits page
+- site.data.textblocks.footer.support: Link text for support page
+- site.data.textblocks.footer.faqs: Link text for FAQs page
+- site.data.textblocks.footer.more: More section title
+- site.data.textblocks.footer.privacy: Link text for privacy page
+- site.data.textblocks.footer.terms: Link text for terms page
+- site.data.textblocks.footer.imprint: Link text for imprint page
+- site.data.textblocks.footer.copyright: Copyright text
+- site.data.textblocks.footer.unerwartet_design: Design credit text
+- site.data.textblocks.footer.bureaubuero: Agency credit text
+{% endcomment %}
+
 <footer class="lg:min-h-[80vh] flex flex-col bg-purple-50">
     <div class="pt-8 px-8 lg:pt-24 md:px-4">
         <div class="max-w-7xl mx-auto">
