--- a/_includes/sections/steps-quote.html
+++ b/_includes/sections/steps-quote.html
@@ -22,7 +22,7 @@ Parameters:
 {% assign section_data = site.data.textblocks.pages[page_key].sections[section] | default:
 site.data.textblocks.sections[section] %}
 
-<div class="px-8 md:px-4 py-10 md:py-32">
+<div class="px-8 md:px-4 py-10 md:pt-32">
     <div class="max-w-7xl mx-auto">
         <div class="text-center mb-16">
             {% include elements/section-headline.html text=section_data.headline %}
